# Desktop-Personal-Config

docky-2.2.1.1/StandardPlugins/: Makefile  Makefile.am  Makefile.in
docky-2.2.1.1/StandardPlugins/BatteryMonitor/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Bookmarks/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/CPUMonitor/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Clippy/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Clock/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Clock/Themes/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Clock/Themes/Default/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Clock/Themes/Default24/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Desktop/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Desktop/src/: ShowDesktopItem.cs
docky-2.2.1.1/StandardPlugins/GMail/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Mounter/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/NPR/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/NetworkManager/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/NetworkMonitor/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/RecentDocuments/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/SessionManager/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Timer/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Trash/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/Weather/: Makefile  Makefile.in
docky-2.2.1.1/StandardPlugins/WorkspaceSwitcher/: Makefile  Makefile.in
(+164 files in other folders)
