SUBDIRS = \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NPR \
	RecentDocuments \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

DIST_SUBDIRS = \
	Bookmarks \
	Clippy \
	Clock \
	Desktop \
	CPUMonitor \
	GMail \
	Mounter \
	NPR \
	RecentDocuments \
	Timer \
	Trash \
	Weather \
	WorkspaceSwitcher

